xp translated + fix 'common-OS'

--- a/app/views/support/linux.html
+++ b/app/views/support/linux.html
@@ -1,8 +1,8 @@
-<p>{{"support-view--linux-content1-a" | translate}} <span class="icon--linux">  Linux <i>{{"support-view--linux-content1-b" | translate}}</i></p>
-<p>{{"support-view--linux-content2" | translate}}
+<p>{{"support-view--common-OScontent1" | translate}} <span class="icon--linux">  Linux </span> <i>{{"support-view--linux-content1end" | translate}}</i></p>
+<p>{{"support-view--common-OScontent2" | translate}}
     <ul>
         <li class="icon--check">
-          {{"support-view--linux-info1" | translate}} <span class="icon--chrome"> ChromeApp</span>.
+          {{"support-view--common-OSinfo1" | translate}} <span class="icon--chrome"> ChromeApp</span>.
           <ul>
             <li>
               <ul>
