--- a/app/views/support/xp.html
+++ b/app/views/support/xp.html
@@ -1,12 +1,17 @@
-<p>
-    <strong>No podemos dar soporte</strong> a
-    <span class="icon--windows"> Windows XP
-        <span> ya que está obsoleto</p>
-<p>Hemos recibido reportes de usuarios bajo XP que han conseguido hacer funcionar el software, solventando las siguientes dificultades:
+<p>{{"support-view--common-OScontent1" | translate}} <span class="icon--windows"> Windows XP <span> <i>{{"support-view--windows-content1end" | translate}}</i></p>
+<p>{{"support-view--common-OScontent2" | translate}}
     <ul>
-        <li class="icon--check"> Si recibe el mensaje de error <i  class="text--secondary">"FATAL ERROR web2boardlink returned -1"</i>, pruebe a utilizar el modo online instalando los drivers manualmente.</li>
-        <li class="icon--check"> Pruebe activando el modo online para funcionar como <span class="icon--chrome"> ChromeApp</span>. Puede activar el modo <span class="icon--chrome"> ChromeApp</span> en el <a href="/#/account">panel de configuración de su cuenta</a>, bajo la opción:<br>
-            <i class="text--secondary">"{{"account-checkbox-chromeapp" | translate}}"</i>
+        <li class="icon--check">{{"support-view--common-OSinfo1" | translate}} <span class="icon--chrome"> ChromeApp</span>.
+            <ul>
+              <li>
+                <ul>
+                  <li>
+                    <a href="/#/account">{{'account-config' | translate}}</a>: <i class="text--secondary">"{{"account-checkbox-chromeapp" | translate}}"</i>
+                  </li>
+                </ul>
+              </li>
+            </ul>
         </li>
+        <li class="icon--check"> {{"support-view--windows-info1" | translate}} <i  class="common--text-term-fx little">"FATAL ERROR web2boardlink returned -1"</i>, {{"support-view--windows-info2" | translate}}</li>
     </ul>
 </p>
