--- a/app/views/support/w2bCrashForm.html
+++ b/app/views/support/w2bCrashForm.html
@@ -1,28 +1,26 @@
 <div class="support--form" data-ng-if="common.user">
-    <p>Este error suele producir en consecuencia que Bitbloq pida instalar de nuevo web2board
-        <br>Necesitamos que incluya el contenido de los <i class="text--secondary">ficheros de log</i> de web2board en el formulario de contacto.
-    </p>
+    <p>{{'support-view--w2vCrashForm-content1' | translate}}<br>{{'support-view--w2vCrashForm-content2' | translate}}</p>
     <p data-ng-include="'views/support/logRoutes.html'"></p>
     <br />
     <form name="form">
         <fieldset>
           <!-- SO -->
           <div class="form-control">
-              <legend class="icon--check">Sistema Operativo y versión del mismo</legend>
+              <legend class="icon--check">{{'modal-inform-error-os-version-placeholder' | translate}}</legend>
               <span class="form--input common--textarea" data-ng-class="{'input--focused':focus === 'system'}">
                   <input ng-model="response.system" ng-focus="focus = 'system'" ng-blur="focus = false" id="system" name="system" type="text" maxlength="50" placeholder="Sistema Operativo y {{'modal-inform-error-os-version-placeholder' | translate}}" autocorrect="off" autocomplete="off" required>
               </span>
           </div>
             <!-- linklog -->
             <div class="form-control">
-                <legend class="icon--check">Añada el contenido de web2boardLink.log</legend>
+                <legend class="icon--check">{{'support-view--w2vCrashForm-content3' | translate}}</legend>
                 <span class="form--input common--textarea" data-ng-class="{'input--focused':focus === 'linklog'}">
                     <textarea ng-model="response.linklog" rows="5" class="msd-elastic" ng-model="response.linklog" placeholder="web2boardLink.log" data-ng-focus="focus = 'linklog'" data-ng-blur="focus = false" data-element="modal-inform-linklog-textarea-placeholder" style="overflow: auto;" />
                 </span>
             </div>
             <!-- w2blog -->
             <div class="form-control">
-                <legend class="icon--check">Añada el contenido de info.log</legend>
+                <legend class="icon--check">{{'support-view--w2vCrashForm-content4' | translate}}</legend>
                 <span class="form--input common--textarea" data-ng-class="{'input--focused':focus === 'w2blog'}">
                     <textarea ng-model="response.w2blog" rows="5" class="msd-elastic" ng-model="response.w2blog" placeholder="info.log" data-ng-focus="focus = 'w2blog'" data-ng-blur="focus = false" data-element="modal-inform-w2blog-textarea-placeholder" style="overflow: auto;" />
                 </span>
@@ -35,8 +33,9 @@
 </div>
 
 <div class="support--form" data-ng-if="!common.user">
-  <p>Este error suele producir en consecuencia que Bitbloq pida instalar de nuevo web2board, <strong>necesitamos que se ponga en contacto</strong> con nuestros técnicos enviando un mail a <a href="mailto:soporte.bitbloq@bq.com" target="_blank" class="icon--url">soporte.bitbloq@bq.com</a></p>
+  <p>{{'support-view--w2vCrashForm-content1' | translate}}<br>
+    {{'support-view--w2vCrashForm-content5' | translate}} <a href="mailto:soporte.bitbloq@bq.com" target="_blank" class="icon--url">soporte.bitbloq@bq.com</a></p>
     <p class="icon--check">
-        <strong>Recuerde explicar detalladamente su consulta e incluir los ficheros de log.</strong>
+        <strong>{{'support-view--w2vCrashForm-content6' | translate}}</strong>
     </p>
 </div>
