--- a/app/views/support/dontLoad.html
+++ b/app/views/support/dontLoad.html
@@ -1,61 +1,70 @@
-<p>¿Has <strong>refrescado la caché</strong> del navegador?</p>
-<p>La caché del navegador es una función que tienen los principales navegadores web, que permite cargar las páginas web más rápido guardando en el ordenador parte de la información que previamente se ha solicitado</p>
-<p>Para <i>refrescar la cache</i>:</p>
+<p>{{'support-view--dontLoad-content1' | translate}}</br>
+    {{'support-view--dontLoad-content2' | translate}}</p>
+<p>{{'support-view--dontLoad-content3' | translate}}</p>
 <ul>
-    <li class="icon--windows">
-        <strong> Windows:</strong>
-        <p>Presiona la combinación de teclas
+    <li class="icon--windows"><strong> Windows:</strong>
+        <p>
+            {{'support-view--dontLoad-content4-a' | translate}}
             <span class="common--icon-keycap-fx">Ctrl</span> +
-            <span class="common--icon-keycap-fx">⇧ Mayús</span> +
-            <span class="common--icon-keycap-fx">R</span>, y
-            <strong>vuelve a repetir la acción justo en el momento en el que lapágina comienza a cargarse</strong>
+            <span class="common--icon-keycap-fx">⇧ {{'support-view--dontLoad-mayus' | translate}}</span> +
+            <span class="common--icon-keycap-fx">R</span>
+            {{'support-view--dontLoad-content4-b' | translate}}
         </p>
     </li>
-    <li class="icon--mac">
-        <strong> Mac:</strong>
-        <p>Presiona la combinación de teclas
+    <li class="icon--mac"> <strong> Mac:</strong>
+        <p>
+            {{'support-view--dontLoad-content4-a' | translate}}
             <span class="common--icon-keycap-fx">⌘ CMD</span> +
-            <span class="common--icon-keycap-fx">⇧ Mayus.</span> +
-            <span class="common--icon-keycap-fx">R</span>, y
-            <strong>vuelve a repetir la acción justo en el momento en el que lapágina comienza a cargarse</strong>
+            <span class="common--icon-keycap-fx">⇧ {{'support-view--dontLoad-mayus' | translate}}</span> +
+            <span class="common--icon-keycap-fx">R</span>
+            {{'support-view--dontLoad-content4-b' | translate}}
         </p>
     </li>
-    <li class="icon--linux">
-        <strong> Linux:</strong>
-        </strong>
-        <p>Presiona la combinación de teclas
+    <li class="icon--linux"><strong> Linux:</strong>
+        <p>
+            {{'support-view--dontLoad-content4-a' | translate}}
             <span class="common--icon-keycap-fx">Ctrl</span> +
-            <span class="common--icon-keycap-fx">⇧ Mayús</span> +
-            <span class="common--icon-keycap-fx">R</span>, y
-            <strong>vuelve a repetir la acción justo en el momento en el que lapágina comienza a cargarse</strong>
+            <span class="common--icon-keycap-fx">⇧ {{'support-view--dontLoad-mayus' | translate}}</span> +
+            <span class="common--icon-keycap-fx">R</span>
+            {{'support-view--dontLoad-content4-b' | translate}}
         </p>
     </li>
 </ul>
-<p>Para <i>vaciar la caché <strong>por completo</strong></i>:</strong>
+<p>{{'support-view--dontLoad-content5' | translate}}</strong>
     <ul>
         <li>
-            <strong class="icon--check"> Primero:</strong>
-            <p>En
-            <span class="icon--windows">Windows</span> y <span class="icon--linux">Linux</span>, haz clic en "Herramientas" <i>(el botón con forma de llave de tuercas en la esquina superior derecha del navegador)</i> y haz clic en "Opciones" <i>(atajo de teclado: <span class="common--icon-keycap-fx">Ctrl</span> + <span class="common--icon-keycap-fx">⇧ Mayús</span> + <span class="common--icon-keycap-fx">Supr</span>)</i>.
-                <br>En
-                <span class="icon--mac">Mac</span>, dirígete al menú "Chrome" y selecciona "Preferencias".</p>
+            <strong class="icon--check"> {{'support-view--dontLoad-title1' | translate}}</strong>
+            <ul>
+              <li>
+                <ul>
+                  <li>
+                    <span class="icon--windows"> Windows</span> + <span class="icon--linux"> Linux</span>:
+                    {{'support-view--dontLoad-content6-a' | translate}}
+                    <i>({{'support-view--dontLoad-content6-b' | translate}})</i>
+                    {{'support-view--dontLoad-content6-c' | translate}}
+                    <i>({{'support-view--dontLoad-content6-d' | translate}} <span class="common--icon-keycap-fx">Ctrl</span> + <span class="common--icon-keycap-fx">⇧ {{'support-view--dontLoad-mayus' | translate}}Mayús</span> + <span class="common--icon-keycap-fx">Supr</span>)</i>.
+                    <br>
+                    <span class="icon--mac"> Mac</span>:
+                    {{'support-view--dontLoad-content7' | translate}}.
+                  </li>
+                </ul>
+              </li>
+            </ul>
         </li>
         <li>
-            <strong class="icon--check"> Segundo:</strong>
-            <p>Selecciona la sección "Avanzadas", y haz clic en "Eliminar datos de navegación..."</p>
+            <strong class="icon--check"> {{'support-view--dontLoad-title2' | translate}}</strong>
+            {{'support-view--dontLoad-content8' | translate}}
         </li>
         <li>
-            <strong class="icon--check"> Tercero:</strong>
-            <p>Escoge los tipos de datos que quieres limpiar;
-                <strong>asegúrate de seleccionar “Vaciar la caché”</strong>
-            </p>
+            <strong class="icon--check"> {{'support-view--dontLoad-title3' | translate}}</strong>
+            {{'support-view--dontLoad-content9' | translate}}
         </li>
         <li>
-            <strong class="icon--check"> Cuarto:</strong>
-            <p>En la lista desplegable “Eliminar los siguientes elementos desde:” selecciona la opción que prefieras</p>
+            <strong class="icon--check"> {{'support-view--dontLoad-title4' | translate}}</strong>
+            {{'support-view--dontLoad-content10' | translate}}
         </li>
     </ul>
 </p>
 <p class="support--center">
-    <strong>¿Refrescar la caché ha solucionado el problema?</strong>
+    <strong>{{'support-view--dontLoad-next' | translate}}</strong>
 </p>
