--- a/app/styles/_support.scss
+++ b/app/styles/_support.scss
@@ -854,4 +854,7 @@ $support-width: 900px;
             }
         }
     }
+    .support--bootloader-col {
+      padding: 0px 5px 0px 5px;
+    }
 }
