--- a/app/views/support/bootloaderZumBT328.html
+++ b/app/views/support/bootloaderZumBT328.html
@@ -1,45 +1,55 @@
-<p>Vamos a utilizar una placa ZUM Core (BT-328) como programador ISP para poder cargar el <i class="text--secondary">bootloader</i> en el microcontrolador de otra ZUM Core (BT-328).</p>
-<p>Componentes
-    <strong>necesarios</strong>:
+<p>{{'support-view--bootloaderZumBT328-content1' | translate}}</p>
+<p><strong>{{'support-view--bootloaderZumBT328-title1' | translate}}</strong>:
     <ul>
         <li class="icon--check">2x Placas ZUM Core (BT-328)</li>
-        <li class="icon--check">6x Cables unipolares para conexión entre placas</li>
-        <li class="icon--check"><a href="http://arduino.cc/en/Main/Software" target="_blank" class="icon--url">IDE de Arduino</a></li>
-        <li class="icon--check">Cable USB para conexión placa-ordenador</li>
+        <li class="icon--check">6x {{'support-view--bootloaderZumBT328-item1' | translate}}</li>
+        <li class="icon--check"><a href="http://arduino.cc/en/Main/Software" target="_blank" class="icon--url">Arduino IDE</a></li>
+        <li class="icon--check">{{'support-view--bootloaderZumBT328-item2' | translate}}</li>
     </ul>
 </p>
 <p>
-    <strong>Pasos a seguir:</strong>
+    <strong>{{'support-view--bootloaderZumBT328-title2' | translate}}</strong>
     <ul>
         <li class="icon--arrow-right">
-            <strong><i class="text--secondary">PASO1:</i> Cómo preparar el bootloader</strong>
-            <p>La placa ZUM Core (BT-328) tiene un bootloader especial, no incluido entre los básicos que vienen con el programa Arduino. <a href="res/support/bootloader-ZumBT328/bootloader_ZumBT328.hex" target="_blank" class="icon--url">Lo primero que debes hacer es descargar el archivo bootloader <i class="text--secondary">(formato ".hex")</i>.</a></p>
-            <p>Puedes cargar este bootloader mediante
-                <strong>comandos avrdude</strong>, pero si nunca has utilizado comandos en la consola de tu sistema operativo puedes hacer un pequeño intercambio de archivos para poder cargarlo de forma sencilla. Este <i class="text--secondary">“truco”</i> consiste en colocar el bootloader que acabas de descargar en una carpeta en concreto del programa Arduino:
+            <strong>{{'support-view--bootloaderZumBT328-title3' | translate}}</strong>
+            <p>{{'support-view--bootloaderZumBT328-content2-a' | translate}} <a href="res/support/bootloader-ZumBT328/bootloader_ZumBT328.hex" target="_blank" class="icon--url">{{'support-view--bootloaderZumBT328-content2-b' | translate}}</a></p>
+            <p>{{'support-view--bootloaderZumBT328-content3' | translate}}
                 <ul>
-                    <li class="icon--caret-right">Entra en la carpeta donde está instalado Arduino IDE y accede a la dirección
-                        <span class="common--text-term-fx little">hardware/arduino/avr/bootloaders/bt</span>
-                        <br><i class="text--secondary">En la imagen tienes un ejemplo de como se ve la carpeta</i>
-                        <br>
-                        <div class="support--center">
-                            <img src="/images/support/zum-carpeta-arduino.png" alt="zum-carpeta-arduino" class="aligncenter">
+                    <li class="icon--caret-right">{{'support-view--bootloaderZumBT328-content4' | translate}}</li>
+                    <li class="common--text-term-fx">hardware/arduino/avr/bootloaders/bt</li>
+                    <p class="support--centered">
+                      <i class="text--secondary">{{'support-view--bootloaderZumBT328-content5' | translate}}</i>
+                    </p>
+                    <div class="support--center">
+                        <div class="support--img-coolmodal">
+                            <figure class="effect-goliath">
+                                <a href ng-click="imgModal('/images/support/zum-carpeta-arduino.png')">
+                                    <img src="/images/support/zum-carpeta-arduino.png" alt="zum-carpeta-arduino" />
+                                    <figcaption>
+                                        <h2>{{'support-view--common-hardClickImg1' | translate}} <span>click</span> {{'support-view--common-hardClickImg2' | translate}}</h2>
+                                    </figcaption>
+                                </a>
+                            </figure>
                         </div>
-                    </li>
+                    </div>
                     <li class="icon--caret-right">
-                        Renombra el bootloader de la placa ZUM Core (BT-328) “<i class="text--secondary">bootloader_ZumBT328.hex</i>” por “
-                        <strong>ATmegaBOOT_168_atmega328_bt.hex</strong>” y pegarlo en la carpeta que acabamos de abrir, sobreescribiendo el anterior que tenía ese mismo nombre.
+                        {{'support-view--bootloaderZumBT328-content6-a' | translate}}:
+                        <p class="support--centered">
+                          <i class="text--secondary">"bootloader_ZumBT328.hex"</i> -> <i class="text--secondary">"ATmegaBOOT_168_atmega328_bt.hex"</i>
+                        </p>
+                        {{'support-view--bootloaderZumBT328-content6-b' | translate}}
                     </li>
                 </ul>
             </p>
         </li>
         <li class="icon--arrow-right">
-            <strong><i class="text--secondary">PASO 2:</i> Configurar la placa programadora (A) como programador ISP.</strong>
-            <p>Debes cargar el <i class="text--secondary">programa base</i> en la placa programadora (A), en concreto <a href="res/support/bootloader-ZumBT328ArduinoISP.ino" target="_blank" class="icon--url">ArduinoISP.ino</a>.</p>
-            <p>Conecta esta primera placa (A) al ordenador con el cable USB y abre Arduino IDE</p>
-            <p>Selecciona los siguientes parametros en el menú <i class="text--secondary">tools</i>:
+            <strong>{{'support-view--bootloaderZumBT328-title4' | translate}}</strong>
+            <p>{{'support-view--bootloaderZumBT328-content7' | translate}} <a href="res/support/bootloader-ZumBT328ArduinoISP.ino" target="_blank" class="icon--url">ArduinoISP.ino</a>.</p>
+            <p>{{'support-view--bootloaderZumBT328-content8' | translate}}</p>
+            <p>{{'support-view--bootloaderZumBT328-content9' | translate}}
                 <ol class="common--text-editor-fx">
                     <li>Tools/Port =
-                        <strong><i class="text--secondary">El correspondiente a donde se ha conectado la placa</i></strong>
+                        <strong><i class="text--secondary">{{'support-view--bootloaderZumBT328-info1' | translate}}</i></strong>
                     </li>
                     <li>Tools/Board =
                         <strong>Arduino BT</strong>
@@ -51,63 +61,70 @@
             </p>
         </li>
         <li class="icon--arrow-right">
-            <strong><i class="text--secondary">PASO 3:</i> Conectar ambas placas entre sí</strong>
-            <p>Una vez hayas cargado el programa, conecta ambas placas ZUM Core (BT-328) como indica en el siguiente esquema:</p>
-            <p>
+            <strong>{{'support-view--bootloaderZumBT328-title5' | translate}}</strong>
+            <p>{{'support-view--bootloaderZumBT328-content10' | translate}}</p>
                 <div class="support--center">
-                    <img src="/images/support/zum-bootloader-2.png" alt="placa_ZUM_2">
+                    <div class="support--img-coolmodal">
+                        <figure class="effect-goliath">
+                            <a href ng-click="imgModal('/images/support/zum-bootloader-2.png')">
+                                <img src="/images/support/zum-bootloader-2.png" alt="placa_ZUM_2" />
+                                <figcaption>
+                                    <h2>{{'support-view--common-hardClickImg1' | translate}} <span>click</span> {{'support-view--common-hardClickImg2' | translate}}</h2>
+                                </figcaption>
+                            </a>
+                        </figure>
+                    </div>
                 </div>
-            </p>
             <table class="support--center" width="313">
                 <tbody>
                     <tr>
                         <th class="support--text-right">
-                            <i class="text--secondary">[Placa Programadora]</i>
+                            <i class="text--secondary">[{{'support-view--bootloaderZumBT328-info2' | translate}}]</i>
                             <strong>(A)</strong>
                         </th>
-                        <th style="padding: 0px 5px 0px 5px;"></th>
+                        <th class="support--bootloader-col"></th>
                         <th>
-                            <strong>(B)</strong> <i class="text--secondary">[Placa a Programar]</i>
+                            <strong>(B)</strong> <i class="text--secondary">[{{'support-view--bootloaderZumBT328-info3' | translate}}]</i>
                         </th>
                     </tr>
                     <tr>
                         <td class="support--text-right">Pin 10</td>
-                        <td style="padding: 0px 5px 0px 5px;">
+                        <td class="support--bootloader-col">
                             <span class="icon--arrow-right"></span>
                         </td>
                         <td>RESET</td>
                     </tr>
                     <tr>
                         <td class="support--text-right">Pin 11</td>
-                        <td style="padding: 0px 5px 0px 5px;">
+                        <td class="support--bootloader-col">
                             <span class="icon--arrow-right"></span>
                         </td>
                         <td>Pin 11</td>
                     </tr>
                     <tr>
                         <td class="support--text-right">Pin 12</td>
-                        <td style="padding: 0px 5px 0px 5px;">
+                        <td class="support--bootloader-col">
                             <span class="icon--arrow-right"></span>
                         </td>
                         <td>Pin 12</td>
                     </tr>
                     <tr>
                         <td class="support--text-right">Pin 13</td>
-                        <td style="padding: 0px 5px 0px 5px;">
+                        <td class="support--bootloader-col">
                             <span class="icon--arrow-right"></span>
                         </td>
                         <td>Pin 13</td>
                     </tr>
                     <tr>
                         <td class="support--text-right">5V</td>
-                        <td style="padding: 0px 5px 0px 5px;">
+                        <td class="support--bootloader-col">
                             <span class="icon--arrow-right"></span>
                         </td>
                         <td>5V</td>
                     </tr>
                     <tr>
                         <td class="support--text-right">GND</td>
-                        <td style="padding: 0px 5px 0px 5px;">
+                        <td class="support--bootloader-col">
                             <span class="icon--arrow-right"></span>
                         </td>
                         <td>GND</td>
@@ -117,11 +134,11 @@
             <p>&nbsp;</p>
         </li>
         <li class="icon--arrow-right">
-            <strong><i class="text--secondary">PASO 4:</i> Configura parámetros previos</strong>
-            <p>Vuelve a conectar el cable USB a la placa programadora (A). y configura los siguientes parámetros en ArduinoIDE, en el menú <i class="text--secondary">tools</i>:
+            <strong>{{'support-view--bootloaderZumBT328-title6' | translate}}</strong>
+            <p>{{'support-view--bootloaderZumBT328-content11' | translate}}
                 <ol class="common--text-editor-fx">
                     <li>Tools/Port =
-                        <strong><i class="text--secondary">El correspondiente a donde se ha conectado la placa</i></strong>
+                        <strong><i class="text--secondary">{{'support-view--bootloaderZumBT328-info4' | translate}}</i></strong>
                     </li>
                     <li>Tools/Board =
                         <strong>Arduino BT</strong>
@@ -133,19 +150,21 @@
                         <strong>Arduino as ISP</strong>
                     </li>
                 </ol>
-                <i class="text--secondary">Respecto al paso 1, añadimos la opción Tools/Programmer; ¡no te olvides!</i>
+                <i class="text--secondary">{{'support-view--bootloaderZumBT328-info5' | translate}}</i>
             </p>
         </li>
         <li class="icon--arrow-right">
-            <strong><i class="text--secondary">PASO 5:</i> Carga el Bootloader</strong>
-            <p style="padding-left: 30px; text-align: left;">Pulsa sobre
-                <em>Tools/Burn Bootloader</em>
+            <strong>{{'support-view--bootloaderZumBT328-title7' | translate}}</strong>
+            <p>
+              <ul>
+                <li>
+                  <ul>
+                    <li>{{'support-view--bootloaderZumBT328-content12' | translate}}</li>
+                  </ul>
+                </li>
+              </ul>
             </p>
         </li>
     </ul>
 </p>
-<p style="text-align: left;">
-    <strong>Si se muestran errores al cargar</strong> el
-    <i class="text--secondary">bootloader</i>,
-    <strong>prueba a reiniciar varias veces ArduinoIDE</strong> hasta que reconozca nuestro archivo
-    <i class="text--secondary">.hex</i> modificado.</p>
+<p><strong>{{'support-view--bootloaderZumBT328-next' | translate}}</strong></p>
