--- a/app/styles/hardwaretab.scss
+++ b/app/styles/hardwaretab.scss
@@ -445,6 +445,18 @@ $hw_toolbox: 210px;
             height: 300px;
             background-color: transparent;
         }
+        &.echidna-bqZUM {
+            background-image: url("/images/boards/echidna-bqZUM.svg"), url("/images/boards/echidna-bqZUM.png");
+            width: 400px;
+            height: 300px;
+            background-color: transparent;
+        }
+        &.echidna-FreaduinoUNO {
+            background-image: url("/images/boards/echidna-FreaduinoUNO.svg"), url("/images/boards/echidna-FreaduinoUNO.png");
+            width: 400px;
+            height: 300px;
+            background-color: transparent;
+        }
     }
 
     .component {
