--- a/app/views/support/hardLista.html
+++ b/app/views/support/hardLista.html
@@ -1,5 +1,5 @@
 <div class="support--centered">
-    <ul class="support--hard-list" data-ng-repeat="item in components">
+    <ul class="support--hard-list" data-ng-repeat="item in card.data.scope.componentList">
         <li data-ng-init="getSVG(item)">
             <a href="" data-ng-click="go(item.permalink, true)">
                 <!-- <img src="images/components/{{item.uuid}}.svg" height="100" alt="{{item.name}}" id="{{item.uuid}}-svg" /> -->
