fix support jshint message and shield icon

--- a/app/views/project/hardwareToolbox.html
+++ b/app/views/project/hardwareToolbox.html
@@ -51,7 +51,7 @@
             <li ng-show="boardsMap[currentProject.hardware.board].shields.length > 0" class="tabs__header__item--vertical" ng-class="{'selected--tab': selectedToolbox==='shields'}">
                 <button class="btn-svg" ng-click="changeToolbox('shields')" data-element="toolbox-shields">
                     <svg class="svg-icon">
-                        <use xlink:href="#robot"></use>
+                        <use xlink:href="#shield"></use>
                     </svg>
                 </button>
             </li>
