--- a/app/views/support/support.html
+++ b/app/views/support/support.html
@@ -15,7 +15,7 @@
             <div class="support--content">
                 <h1 class="h2 header__title support--centered">{{ card.title | translate }}</h1>
                 <span class="support--card--data" data-ng-if="card.data && !card.data.ext" data-ng-bind-html="card.data.body  | translate"></span>
-                <span class="support--card--data" data-ng-if="card.data && card.data.ext" data-ng-include="'views/support/' + card.data.body"></span>
+                <span class="support--card--data" data-ng-if="card.data && card.data.ext" data-ng-include="setTimestampToURL('views/support/',card.data.body)"></span>
                 <div class="support--next" data-ng-if="card.next.length <= 3">
                     <span class="support--next-child" data-ng-repeat="child in card.next">
                         <button class="btn" data-ng-class="(child.class === 'green') ? 'btn--primary' : ((child.class === 'red') ? 'btn--primary btn--no' : 'btn--secondary')" data-ng-click="go(child.permalink)" data-element="support_next_child-{{child._id}}">
